JsTestDriver/test/testData/assertFramework/jstd/highlighting/jstdTestCaseQuickFixAvailable.js
<error descr="No code assistance for JsTestDriver assertion framework">TestCase</error>("", {

});